src/objects/Member_Skill_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Member Skill Snapshot</label>
    <nameField>
        <label>Skill Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Skill Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>